# cappy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
cmake/: Packaging.cmake  ProjectOptions.cmake
docs/: architecture.md  build-and-package.md  ci.md  roadmap.md
docs/adr/: 0001-qt6-widgets-plugin-architecture.md
resources/linux/: cappy.desktop.in
scripts/: bootstrap-ubuntu-qt-userland.sh  configure-local-ubuntuqt.sh  download-latest-windows-artifact.sh  format-cpp.sh  package-linux.sh  package-windows.ps1  run-clang-tidy.sh  verify-deb-package.sh  verify-windows-package.ps1
src/: CMakeLists.txt
src/apps/cappy/: AppBootstrap.cpp  AppBootstrap.h  AppCommand.h  AppController.cpp  AppController.h  AppDirectories.cpp  AppDirectories.h  AppLogger.cpp  AppLogger.h  AppSettings.cpp  AppSettings.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  ShellTheme.cpp  ShellTheme.h  main.cpp
src/apps/cappy/tests/: MainWindowSnapshot.cpp  MainWindowTest.cpp  SettingsDialogSnapshot.cpp  SettingsDialogTest.cpp
src/domain/: CMakeLists.txt
src/domain/capture/: CMakeLists.txt
src/domain/capture/include/cappy/domain/capture/: CaptureImageOps.h  CaptureTypes.h
src/features/: CMakeLists.txt
src/features/capture/: CMakeLists.txt
src/features/capture/include/cappy/features/capture/: CaptureOverlayWidget.h
src/features/capture/src/: CaptureOverlayWidget.cpp
src/features/capture/tests/: CaptureOverlayWidgetTest.cpp
src/features/editor/: CMakeLists.txt
src/features/editor/include/cappy/features/editor/: CaptureEditorWindow.h
src/features/editor/src/: CaptureEditorWindow.cpp
src/features/ocr/: CMakeLists.txt
src/features/ocr/include/cappy/features/ocr/: OcrResultWindow.h
src/features/ocr/src/: OcrResultWindow.cpp
src/features/ocr/tests/: OcrResultWindowSnapshot.cpp
src/features/pinboard/: CMakeLists.txt
src/features/pinboard/include/cappy/features/pinboard/: PinnedImageWindow.h
src/features/pinboard/src/: PinnedImageWindow.cpp
src/features/pinboard/tests/: PinnedImageWindowTest.cpp
src/libs/localization/: CMakeLists.txt
src/libs/localization/include/cappy/localization/: Localization.h
src/libs/localization/src/: Localization.cpp
src/libs/plugin_api/: CMakeLists.txt
src/libs/plugin_api/include/cappy/plugin_api/: IPlugin.h
src/libs/plugin_host/: CMakeLists.txt
src/libs/plugin_host/include/cappy/plugin_host/: PluginManager.h
src/libs/plugin_host/src/: PluginManager.cpp
src/libs/shortcuts/: CMakeLists.txt
src/libs/shortcuts/include/cappy/shortcuts/: ShortcutSettings.h
src/libs/shortcuts/src/: ShortcutSettings.cpp
src/platform/: CMakeLists.txt
src/platform/capture/: CMakeLists.txt
src/platform/capture/include/cappy/platform/capture/: DesktopCaptureBackendFactory.h  IDesktopCaptureBackend.h
src/platform/capture/src/: DesktopCaptureBackendFactory.cpp  QtScreenCaptureBackend.cpp  QtScreenCaptureBackend.h  UnsupportedCaptureBackend.cpp  UnsupportedCaptureBackend.h
src/platform/hotkey/: CMakeLists.txt
src/platform/hotkey/include/cappy/platform/hotkey/: GlobalHotkeyBackendFactory.h  GlobalHotkeyTypes.h  IGlobalHotkeyBackend.h
src/platform/hotkey/src/: GlobalHotkeyBackendFactory.cpp  UnsupportedGlobalHotkeyBackend.cpp  UnsupportedGlobalHotkeyBackend.h  WinGlobalHotkeyBackend.cpp  WinGlobalHotkeyBackend.h  X11GlobalHotkeyBackend.cpp  X11GlobalHotkeyBackend.h
src/plugins/: CMakeLists.txt
src/plugins/builtin_core/: CMakeLists.txt  CorePlugin.cpp  CorePlugin.h  CorePlugin.json
src/services/: CMakeLists.txt
src/services/capture/: CMakeLists.txt
src/services/capture/include/cappy/services/capture/: CaptureCoordinator.h
src/services/capture/src/: CaptureCoordinator.cpp
src/services/hotkey/: CMakeLists.txt
src/services/hotkey/include/cappy/services/hotkey/: GlobalHotkeyService.h
src/services/hotkey/src/: GlobalHotkeyService.cpp
src/services/ocr/: CMakeLists.txt
src/services/ocr/include/cappy/services/ocr/: OcrService.h  OcrTypes.h
src/services/ocr/src/: OcrService.cpp
src/services/ocr/tests/: OcrServiceTest.cpp
src/services/pinboard/: CMakeLists.txt
src/services/pinboard/include/cappy/services/pinboard/: PinboardManager.h
src/services/pinboard/src/: PinboardManager.cpp
